--- a/TimerLab/TimerLab.csproj
+++ b/TimerLab/TimerLab.csproj
@@ -69,6 +69,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MyAlarm.cs" />
     <Compile Include="MyTimer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
